# Python-AXFR-Test

./: .gitignore  axfr-test.py  cache.json  pyproject.toml  root-zone-scan.py
