[tool.poetry]
name = "python-axfr-test"
version = "0.1.0"
description = "A tiny tool to check misconfigured dns servers"
authors = ["Stefan <meinecke@greensec.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^2.2.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
